# snake-corp

./: .gitignore  README.md
snake-corp-dateutil/: pyproject.toml
snake-corp-dateutil/snake_corp/: dateutil.py
snake-corp-downloader/: pyproject.toml
snake-corp-downloader/snake_corp/: downloader.py
snake-corp-dual/: pyproject.toml
snake-corp-dual/snake_corp/: dual_one.py  dual_two.py
snake-corp-magic-numbers/: pyproject.toml
snake-corp-magic-numbers/snake_corp/: magic.py
snake-corp-timestamp-generator/: pyproject.toml
snake-corp-timestamp-generator/snake_corp/: TimestampGenerator.py
snake-service/: d_t.py  m_d.py  requirements.txt  snake_service.py
