[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["snake_corp"]
namespaces = true

[project]
name = "snake-corp-downloader"
version = "1.0.0"
description = "Download Utilities for the Snake Corporation"
license = { text = "Snake Corp Software License Agreement" }