[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["snake_corp"]
namespaces = true

[project]
name = "snake-corp-dual"
version = "0.0.1"
description = "Testing two modules"
license = { text = "Snake Corp Software License Agreement" }