[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["snake_corp"]
namespaces = true

[project]
name = "snake-corp-timestamp-generator"
version = "1.0.1"
description = "Timestamp Generator for the Snake Corporation"
license = { text = "Snake Corp Software License Agreement" }