[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["snake_corp"]
# exclude = ["foo", "bar*"] ## Exclude packages matching these glob patterns
namespaces = true 

# Or explicitly list packages to include
# [tool.setuptools]
# packages = ["my_package"]

[project]
name = "snake-corp-timestamp-generator"
version = "1.0.1"
authors = [
    { name = "omega", email = "omega@securitas.com" },
]
description = "Timestamp Generator for the Snake Corporation"
license = { text = "Snake Corp Software License Agreement" }

# This info is for pypi.org
[project.urls]
Source = "https://github.com/securitas-digital-dsde"